<resources>

  <!-- Main Activity : Used throughout the application-->
  <string name="app_name">Simple Bible</string>
  <string name="default_verse_reference">43:3:16</string>
  <string name="activity_bottom_app_bar_menu_home">Home</string>
  <string name="activity_bottom_app_bar_menu_book_list">Books</string>
  <string name="activity_bottom_app_bar_menu_search">Search</string>
  <string name="activity_bottom_app_bar_menu_bookmark_list">Bookmarks</string>
  <string name="activity_bottom_app_bar_menu_settings">Settings</string>

  <string name="app_notif_channel_name">Default Notification Channel</string>
  <string name="app_notif_channel_desc">Notifications will use this group by default.</string>

  <!-- DBSetup : Used for validation -->
  <string name="book_name_first">Genesis</string>
  <string name="book_name_last">Revelation</string>

  <!-- HomeScreen : Text shown when DB is being setup -->
  <string name="scr_home_verse_content_loading">
    <![CDATA[
    <h1>Simple Bible</h1>
    <h5>CREATING DATABASE</h5>
    <h5>Please be patient like Jacob<br/>
    for it is said in<br/><br/>
    <b>The Book of Genesis<br/>
    Chapter 29 Verse 20</b></h5>
    <h3>Jacob served seven years for Rachel.<br/>
    They seemed to him but a few days,<br/>
    for the love he had for her.</h3><br/><br/>
    <b>The World English Bible</b>]]></string>

  <!-- HomeScreen : Template of Daily Verse -->
  <string name="scr_home_verse_content_template">
    <![CDATA[
    <h1>Simple Bible</h1><br/>
    <h5>%s</h5>
    <h5>Chapter %d Verse %d</h5><br/>
    <h3>%s</h3><br/>
    The World English Bible]]></string>

  <!-- HomeScreen : Text shown when the Daily Verse fails to load for any reason -->
  <string name="scr_home_verse_content_default">
    <![CDATA[
    <h1>Simple Bible</h1><br/>
    <h5>The Gospel of John<br/>
    Chapter 03 Verse 16</h5><br/>
    <h3>For God so loved the world,<br/>
    that he gave his one and only Son,<br/>
    that whoever believes in him<br/>
    should not perish,<br/>
    but have eternal life.</h3><br/>
    <b>The World English Bible</b>]]></string>
</resources>
